Fix for jumping layout

--- a/learn21.css
+++ b/learn21.css
@@ -1,5 +1,5 @@
 @media(min-width: 45rem) {
-  html { font-size: 20px; }
+  body { font-size: 20px; }
 }
 body {
   margin: 0;
